Adding image to Occlusion Prediciton Section

--- a/text/tex/content.tex
+++ b/text/tex/content.tex
@@ -997,6 +997,14 @@ The future position $\vec{p_{t}}$ of the target can be then simply estimated as 
 %- dat obrazek, pohled shora, kde cil se pohybuje smerem za prekazku, zobrazit predikovanou pozici cile a vybarvit body, ktere nalezi prekazce
 % zminit pozuiti PCL (odkazuji se na ni z textu sem)
 
+%% Schema of occlusion by obstacle as seen by 2 CUs. Occlusion prediciotn via point cloud schema.
+\begin{figure}[htb]
+	\centering
+	\includegraphics[width=0.95\linewidth]{fig/occlusion_2_units_pointcloud.pdf}
+	\caption{\todo{pridat caption}.}
+	\label{fig:occlusion_prediciton}
+\end{figure}
+
 %-------------------------------------------------------------------------
 %-------------------------------------------------------------------------
 \section{Hardware and Software Architecture} \label{txt:hw_and_sw_architecture}
